--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,12 @@ buildscript {
         classpath 'org.ajoberstar:gradle-git:1.3.2'
     }
 }
+
 apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.0'
 
     defaultConfig {
         minSdkVersion 9
@@ -27,7 +29,7 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:23.1.0"
+    compile 'com.android.support:support-v4:22.2.1'
 }
 
 allprojects {
