- Eliminato upload aar to maven

--- a/build.gradle
+++ b/build.gradle
@@ -98,4 +98,4 @@ task buildVlc(type: Copy, dependsOn: 'copyJniLibs') {
 }
 
 //upload aar to maven central with sonatype
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/8cfffbbff6b9094af1c92318ea5d5a5bb0b8bb30/gradle-mvn-push.gradle'
+//apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/8cfffbbff6b9094af1c92318ea5d5a5bb0b8bb30/gradle-mvn-push.gradle'
